--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 93aa474
+	base = 4a9a415
 	trimbase = 
 	parent = release/kinetic/zeroconf_jmdns_suite
-	previous = 
+	previous = 93aa474
