--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 2efd8e0
+	base = 4023b58
 	trimbase = 
 	parent = arch/kinetic/zeroconf_jmdns_suite
-	previous = 
+	previous = 2efd8e0
